galaxy lint, add test suite for HEAD versions

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -45,6 +45,11 @@ suites:
   - name: default
     run_list:
     attributes:
+  - name: default-HEAD
+    run_list:
+    attributes:
+    includes:
+      - ubuntu-18.04
   - name: nginx
     run_list:
     includes:
