--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -37,3 +37,5 @@
 
 - name: install PHP dependencies via composer (kamisama/cake-resque, Vendor)
   composer: command=install working_dir={{ misp_rootdir }}/app
+  register: pkg_result
+  until: pkg_result is success
