--- a/tasks/lief.yml
+++ b/tasks/lief.yml
@@ -30,7 +30,7 @@
       git:
         repo: https://github.com/lief-project/LIEF.git
         dest: "{{ misp_lief_rootdir }}"
-        version: HEAD
+        version: "{{ misp_lief_version | default('0.9.0') }}"
         update: no
         force: no
       when: not l.stat.exists
