--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,14 +79,16 @@
   command: pear list
   register: pearinstalled
   changed_when: false
-- name: updated access to pear.php.net
-  command: pear channel-update pear.php.net
-  when: pearinstalled.stdout.find("Crypt_GPG") == -1
+#- name: updated access to pear.php.net
+#  command: pear channel-update pear.php.net
+#  when: pearinstalled.stdout.find("Crypt_GPG") == -1
 - name: install php pear dependencies
-  pear: name={{ item }} state=present
+  pear:
+    name: "{{ item }}"
+    state: present
   with_items:
-    - Crypt_GPG
-    - Net_GeoIP
+    - "{{ misp_rootdir }}/INSTALL/dependencies/Console_CommandLine/package.xml"
+    - "{{ misp_rootdir }}/INSTALL/dependencies/Crypt_GPG/package.xml"
 
 ## TODO duplicate from misp-modules/requirements?
 - name: install python dependencies with pip - python3
