--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -55,6 +55,9 @@ misp_pkg_list:
     - iproute
     - ssdeep-devel
     - ssdeep-libs
+    - openjpeg-devel
+    - rubygem-rouge
+    - rubygem-asciidoctor
 
 easy_install_bin: easy_install-3.6
 python3_bin: python36
