Revert "centos7 pip: remove environment as using virtualenv"
This reverts commit 701030d56344522b4ef3fce22915889069ed9eec.

--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -35,6 +35,8 @@
     requirements: "{{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS"
     virtualenv: "{{ misp_virtualenv }}"
   when: ansible_os_family == 'RedHat'
+  environment:
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   register: pkg_result
   until: pkg_result is success
   become: yes
@@ -45,6 +47,8 @@
     name: "file://{{ mispmodules_rootdir }}/misp-modules"
     virtualenv: "{{ misp_virtualenv }}"
     virtualenv_python: "{{ python3_bin }}"
+  environment:
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   register: pkg_result
   until: pkg_result is success
   become: yes
