centos7 pip: add virtualenv to environment PATH

--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -36,7 +36,7 @@
     virtualenv: "{{ misp_virtualenv }}"
   when: ansible_os_family == 'RedHat'
   environment:
-    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+    PATH: "{{ misp_virtualenv }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   register: pkg_result
   until: pkg_result is success
   become: yes
@@ -48,7 +48,7 @@
     virtualenv: "{{ misp_virtualenv }}"
     virtualenv_python: "{{ python3_bin }}"
   environment:
-    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+    PATH: "{{ misp_virtualenv }}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
   register: pkg_result
   until: pkg_result is success
   become: yes
