--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -40,6 +40,7 @@ misp_pkg_list:
 ## http://stackoverflow.com/questions/32618686/how-to-install-pip-in-centos-7
 #    - python3-pip
     - python36-setuptools
+    - python-virtualenv
 #    - python36-six
 # FIXME! not available
 #    - libpq5
