--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -32,6 +32,7 @@
     requirements: "{{ mispmodules_rootdir }}/misp-modules/REQUIREMENTS"
     virtualenv: "{{ misp_virtualenv }}"
     virtualenv_python: "{{ python3_bin }}"
+    chdir: "{{ mispmodules_rootdir }}/misp-modules"
   when: ansible_os_family == 'Debian'
   register: pkg_result
   until: pkg_result is success
