kitchen: enforce ansible_version latest/implicit - letsencrypt module renaming

--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -18,7 +18,7 @@ provisioner:
 #  ansible_verbose: true
   ansible_verbose: false
   ansible_verbosity: 4
-  ansible_version: latest
+#  ansible_version: 2.7.7
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
   ansible_cfg_path: test/vagrant/ansible.cfg
 #  require_chef_omnibus: false
