--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,7 +17,7 @@ provisioner:
   ansible_verbose: true
 #  ansible_verbose: false
   ansible_verbosity: 2
-  ansible_version: latest
+#  ansible_version: 2.7.7
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
   ansible_cfg_path: test/vagrant/ansible.cfg
   require_ansible_omnibus: true
