--- a/tasks/misp-gem.yml
+++ b/tasks/misp-gem.yml
@@ -6,3 +6,5 @@
     pre_release: yes
     state: present
   with_items: "{{ misp_gem_list | default([]) }}"
+  register: pkg_result
+  until: pkg_result is success
