--- a/.travis.yml
+++ b/.travis.yml
@@ -53,9 +53,11 @@ before_install:
 #  - cat /etc/default/lxd-bridge
 #  - service --status-all
   - sudo service lxd restart
+  - sudo service lxd-bridge restart
   - ifconfig -a
   - ps ax | grep dnsmasq
   - systemctl status -l --no-pager lxd-bridge
+  - systemctl status -l --no-pager lxd
   - cat /etc/default/lxd-bridge
   - cat /etc/network/interfaces.d/50-cloud-init.cfg
 # https://redis4you.com/articles.php?id=012&name=redis
