--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,9 @@ before_install:
   - 'sudo -E su $USER -c "[ ${distribution} == ubuntu ] && lxc image copy ubuntu:${version} local: --alias=${distribution}-${version}" || true'
 ## configure lxd-bridge
   - sudo perl -pi -e 's@^LXD_IPV4_ADDR=""@LXD_IPV4_ADDR="10.252.116.1"@;s@^LXD_IPV4_NETMASK=""@LXD_IPV4_NETMASK="255.255.255.0"@;s@^LXD_IPV4_NETWORK=""@LXD_IPV4_NETWORK="10.252.116.1/24"@;s@^LXD_IPV4_DHCP_RANGE=""@LXD_IPV4_DHCP_RANGE="10.252.116.2,10.252.116.254"@;s@^LXD_IPV4_DHCP_MAX=""@LXD_IPV4_DHCP_MAX="252"@;s@LXD_IPV6_PROXY="true"@LXD_IPV6_PROXY="false"@' /etc/default/lxd-bridge
+  - sudo perl -pi -e 's@eth0@ens4@;' /usr/lib/lxd/profile-config
   - sudo lxc profile device get default eth0 nictype || true
+  - sudo lxc profile device get default ens4 nictype || true
 #  - cat /etc/default/lxd-bridge
 #  - service --status-all
   - sudo service lxd restart
