travis: set network with lxd3

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,21 +48,27 @@ before_install:
 ## pre-download base images
   - 'sudo -E su $USER -c "[ ${distribution} == ubuntu ] || lxc image copy images:${distribution}/${version}/amd64 local: --alias=${distribution}-${version}-nossh"'
   - 'sudo -E su $USER -c "[ ${distribution} == ubuntu ] && lxc image copy ubuntu:${version} local: --alias=${distribution}-${version}" || true'
-## configure lxd-bridge
-  - sudo perl -pi -e 's@^LXD_IPV4_ADDR=""@LXD_IPV4_ADDR="10.252.116.1"@;s@^LXD_IPV4_NETMASK=""@LXD_IPV4_NETMASK="255.255.255.0"@;s@^LXD_IPV4_NETWORK=""@LXD_IPV4_NETWORK="10.252.116.1/24"@;s@^LXD_IPV4_DHCP_RANGE=""@LXD_IPV4_DHCP_RANGE="10.252.116.2,10.252.116.254"@;s@^LXD_IPV4_DHCP_MAX=""@LXD_IPV4_DHCP_MAX="252"@;s@LXD_IPV6_PROXY="true"@LXD_IPV6_PROXY="false"@' /etc/default/lxd-bridge
+## configure network
+  - sudo lxc network info
+  - sudo lxc network list
+  - sudo lxc network show lxdbr0
+  - sudo lxc network set lxdbr0 ipv4.address 10.252.116.1/24
+  - sudo lxc network set lxdbr0 ipv4.dhcp.gateway 10.252.116.1
+  - sudo lxc network set lxdbr0 ipv4.dhcp.range 10.252.116.2-10.252.116.254
+  - sudo lxc network show lxdbr0
   - sudo perl -pi -e 's@eth0@ens4@;' /usr/lib/lxd/profile-config
   - sudo lxc profile device get default eth0 nictype || true
   - sudo lxc profile device get default ens4 nictype || true
 #  - cat /etc/default/lxd-bridge
 #  - service --status-all
   - sudo service lxd restart
-  - sudo service lxd-bridge restart
   - ifconfig -a
   - ps ax | grep dnsmasq
   - systemctl status -l --no-pager lxd-bridge
   - systemctl status -l --no-pager lxd || true
   - cat /etc/default/lxd-bridge
   - cat /etc/network/interfaces.d/50-cloud-init.cfg
+  - systemd-resolve --status lxdbr0
 # https://redis4you.com/articles.php?id=012&name=redis
 # https://vincent.bernat.ch/en/blog/2014-tcp-time-wait-state-linux
   - sudo sysctl -w net.ipv4.tcp_timestamps=1
