--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ before_install:
   - cat /etc/network/interfaces.d/50-cloud-init.cfg
 # configure storage pool
   - sudo lxc storage list
-  - sudo lxc storage create pool1 zfs volume.size=20GB
+  - sudo lxc storage create pool1 zfs
   - sudo lxc storage list
   - sudo zpool list
   - sudo lxc profile device add default root disk path=/ pool=pool1
